Bug 153436 - Arabic spell checking is not available with macOS Spell Checker
Summary: Arabic spell checking is not available with macOS Spell Checker
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All macOS (All)
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords:
Depends on:
Blocks: Arabic-and-Farsi
  Show dependency treegraph
 
Reported: 2023-02-07 12:52 UTC by Khaled Hosny
Modified: 2023-02-08 04:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test document (8.92 KB, application/vnd.oasis.opendocument.text)
2023-02-07 12:52 UTC, Khaled Hosny
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Khaled Hosny 2023-02-07 12:52:08 UTC
Created attachment 185171 [details]
Test document

On macOS with macOS Spell Checker enabled, no spell checking for Arabic is available, even though it is available on other applications like TextEdit.

The attached document has a misspelled word, but it isn’t marked as such.
Comment 1 Commit Notification 2023-02-07 22:01:22 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9d44236a62bf59d120dda89924d0d1407b2bd52b

tdf#153436: Improve handling of Arabic system spell dictionary on macOS

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-02-08 03:30:47 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a897987a01fe8779f3fc0efb36b1c58ca01bd710

tdf#153436: Improve handling of Arabic system spell dictionary on macOS

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.